--- a/css/blocks/news.css
+++ b/css/blocks/news.css
@@ -25,13 +25,17 @@
 
 .news__img {
   float: left;
-}
-
-.news__img-item {
   width: 160px;
   height: 160px;
   margin-right: 19px;
+  
+}
+
+.news__img-item {
+  width: 100%;
+  height: 100%;
   border-radius: 80px;
+  object-fit: cover;
 }
 
 .news__content {
