--- a/intro.css
+++ b/intro.css
@@ -12,6 +12,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 182px;
+  animation-name: stretching;
+  animation-duration: 1.5s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
 }
 
 .intro__logo__link {
@@ -44,4 +48,21 @@
   letter-spacing: 1.2px;
   text-decoration: none;
   margin-top: -7px;
+}
+
+@keyframes stretching {
+  from {
+    width: 0px;
+    transform: translateY(-200px);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  }
+  to {
+    transform: translateY(100px);
+    width: 182px;
+  }
 }
