--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,5 @@
 @import url("./blocks/features.css");
 @import url("./blocks/news.css");
 @import url("./blocks/pagination.css");
+@import url("./blocks/dropdown.css");
 
