--- a/rates.css
+++ b/rates.css
@@ -48,6 +48,16 @@
   position: relative;
 }
 
+.block__item-opacity:hover {
+  background-color: #27273e;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  position: relative;
+  transition: .5s ease;
+}
+
 .block__item-opacity__text {
   margin: 0;
   color: #5dd1f8;
@@ -112,4 +122,5 @@
 
 .partners-block__item:hover {
   filter: grayscale(0);
+  transition: 1s ease;
 }
