--- a/css/blocks/nav.css
+++ b/css/blocks/nav.css
@@ -33,9 +33,68 @@
   letter-spacing: 1px;
 }
 
+.menu-item-star:after {
+  display: inline-block;
+  content: "";
+  background: url("./../../img/menu/spritemenu.png");
+  background-repeat: no-repeat;
+  background-position: -4px -4px;
+  height: 18px;
+  width: 23px;
+}
+.menu-item-star:after:hover   {
+  position: absolute;
+  display: inline-block;
+  content: "";
+  background: url("./../../img/menu/");
+  background-repeat: no-repeat;
+  height: 18px;
+  width: 23px;
+}
+
+.menu-item-main:before {
+  display: inline-block;
+  content: "";
+  background: url("./../../img/menu/spritemenu.png");
+  background-repeat: no-repeat;
+  background-position: -58px -1px;
+  height: 18px;
+  width: 23px;
+}
+
+.menu-item-wallet {
+  display: inline-block;
+  content: "";
+  background: url("./../../img/menu/spritemenu.png");
+  background-repeat: no-repeat;
+  background-position: -110px -2px;
+  height: 18px;
+  width: 23px;
+  opacity: 1;
+/*   transition: opacity 0.5s; */
+}
+
+.menu-item-wallet:hover {
+  opacity: 0;
+}
+
+.menu-item-wallet::before {
+  content: "";
+  background: url("./../../img/menu/spritemenu.png");
+  background-position: -137px -2px;
+  background-repeat: no-repeat;
+  height: 18px;
+  width: 23px;
+  display: inline-block;
+}
+
+.menu-item-wallet::before:hover {
+  opacity: 0;
+} 
+
+
 .container__menu-item-link:hover {
   text-decoration: none;
-  filter: grayscale(100%);
   transition: .3s ease-in-out;
   text-decoration: underline;
 }
