--- a/css/main.css
+++ b/css/main.css
@@ -8,4 +8,9 @@
 @import url("./blocks/news.css");
 @import url("./blocks/pagination.css");
 @import url("./blocks/dropdown.css");
-
+@import url("./blocks/review-form.css");
+@import url("./blocks/separating-block.css");
+@import url("./blocks/reviews-content.css");
+@import url("./blocks/partners-block.css");
+@import url("./blocks/rates.css");
+@import url("./blocks/intro.css")
