--- a/css/blocks/intro.css
+++ b/css/blocks/intro.css
@@ -1,6 +1,6 @@
 .wrapper__intro {
   color: #5dd1f8;
-  background:url("./../../img/intro/main-bg3.jpg") center center no-repeat;
+  background:url("./../../img/intro/intro.jpg") center center no-repeat;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -53,15 +53,15 @@
 @keyframes logo-shake {
   0% {
     opacity: 0;
-    transform: scale(0.01) rotate(45deg);
+    transform: scale(0.01) rotate(55deg);
   }
 
   35% {
-    transform: rotate(-25deg);
+    transform: rotate(-35deg);
   }
 
   75% {
-    transform: rotate(10deg);
+    transform: rotate(7deg);
   }
 
   100% {
@@ -71,6 +71,6 @@
 }
 
 .intro__logo--animate {
-  animation: logo-shake 1.3s;
+  animation: logo-shake 1.5s;
   animation-timing-function: ease;
 }
