--- a/css/blocks/pagination.css
+++ b/css/blocks/pagination.css
@@ -1,49 +1,71 @@
-.container__pages {
+.pagination {
   width: 100%;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  margin-bottom: 67px;
-  margin-top: 40px;
-  margin-left: 12px;
-  padding-left: 1px;
-}
-
-.container__pages-list {
+  margin: 30px auto;
   text-align: center;
 }
 
-.container__page {
+.pagination__title {
+  font-family: Roboto;
   font-weight: 300;
-  margin-right: 14px;
-  margin-left: 7px;
+  font-size: 13px;
+  color: #656464;
+  margin-right: 15px;
+  letter-spacing: 1px;
 }
 
-.container__page-num {
-  font-weight: 700;
-  padding: 2px;
-  padding-top: 2px;
-}
-
-.container__page-item {
-  text-decoration: none;
-  padding: 5px;
-  color: #221f1f;
-}
-
-.container__page-item:hover {
-  background-color: #27273e;
-  border-radius: 3px;
-  color: #ec1e79;
-  width: 100%;
-}
-
-
-ul.container__pages-list li {
-  list-style: none;
+.pagination__list {
+  padding-left: 0;
+  margin-left: 6px;
+  list-style-type: none;
+  text-align: center;
   display: inline-block;
 }
 
-.container__page-choose {
-  padding-right: 11px;
+.pagination__item {
+  display: inline-block;
+}
+
+.pagination_item_active {
+  width: 25px;
+  height: 25px;
+  padding-top: 2px;
+  border-radius: 5px;
+  background-color: #27273e;
+  color: #ec1e79;
+}
+
+.pagination__item-block {
+  display: block;
+  width: 25px;
+  height: 25px;
+  padding-top: 2px;
+  border-radius: 5px;
+  transition-duration: 0.2s;
+}
+
+.pagination__item__link {
+  font-family: Roboto;
+  font-weight: bold;
+  color: #27273e;
+  text-decoration: none;
+  margin-top: 2px;
+  letter-spacing: 1px;
+  transition-duration: 0.1s;
+}
+
+.pagination_item_cursor_left {
   color: #656464;
+  font-size: 23px;
+  vertical-align: middle;
+}
+
+.pagination__item__link:hover {
+  color: #ec1e79;
+}
+
+.pagination_item_cursor_right {
+  margin-left: 8px;
+  color: #656464;
+  font-size: 23px;
+  vertical-align: middle; 
 }
