--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -3,10 +3,9 @@
   color: white;
   position: relative;
   height: 77px;
-  margin-top: -77px;
-  min-width: 1100px;
+  width: 100%;
   font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
-}
+} 
 
 .footer__social-list .footer__social__logo {
   list-style: none;
