--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -3,7 +3,7 @@
   color: white;
   position: relative;
   height: 77px;
-  width: 100%;
+  min-width: 1100px;
   font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
 } 
 
