--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -4,7 +4,9 @@
   position: relative;
   height: 77px;
   min-width: 1100px;
+  line-height: 1.3;
   font-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+  padding-top: 14px;
 } 
 
 .footer__social-list .footer__social__logo {
@@ -18,14 +20,23 @@
   text-align: center;
 }
 
-/* .footer__social-list .footer__social__logo:hover {
-  background: #8F8F99;
-  box-shadow: 0 0 5px 3px #8F8F99;
-} */
+.footer__text {
+  width: 300px;
+  display: inline-block;
+  float: left;
+  padding-left: 19px;
+}
+
+.footer__logo {
+  width: 492px;
+  display: inline-block;
+  text-align: center;
+}
 
 .footer__social {
-  margin-left: 909px;
-  margin-top: -38px;
+  width: 194px;
+  float: right;
+  display: inline-block;
 }
 
 .footer__social-text {
@@ -44,24 +55,14 @@
   margin-top: 7px;
 }
 
-.footer__text {
+.footer__text-made-by {
   display: inline-block;
   width: 265px;
-  position: relative;
-  left: 19px;
-  top: 12px;
-  line-height: 1.3;
 }
 
 .footer__text-made-by {
   font-size: 14px;
   margin: 0;
-}
-
-.footer__logo {
-  position: absolute;
-  top: 14px;
-  left: 499px;
 }
 
 .footer__social-vk-img {
