--- a/css/blocks/pagination.css
+++ b/css/blocks/pagination.css
@@ -25,19 +25,15 @@
 }
 
 .pagination_item_active {
-  width: 25px;
-  height: 25px;
-  padding-top: 2px;
   border-radius: 5px;
   background-color: #27273e;
   color: #ec1e79;
+  padding: 4px;
 }
 
 .pagination__item-block {
   display: block;
-  width: 25px;
-  height: 25px;
-  padding-top: 2px;
+  padding: 5px;
   border-radius: 5px;
   transition-duration: 0.2s;
 }
